# Goopis

./: .gitignore  CMakeLists.txt  Dockerfile  README  TODO.txt  bishop_attack_lookup.txt  bishop_magic_structs.txt  board.c  board.h  config.yml  main.c  moves.c  moves.h  rook_magic_structs.txt
engineVersions/: rankings_1.txt  rankings_3.txt
include/: attack_patterns.h  board.h  eval.h  moves.h  perft.h  search.h  searching.h
perftTesting/: ArenaGUI.cfg  LastGame.$$$
src/: attack_patterns.c  board.c  eval.c  main.c  moves.c  perft.c  search.c  searching.c
tests/: test_board.cpp
